force-app/main/default/objects/Account/fields/Account_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Full_Name__c</fullName>
    <description>This field shows the complete name of the bank or company as registered.</description>
    <label>Account Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>