force-app/main/default/objects/Account/fields/accountid_18__c.field-meta.xml
<CustomField>
        <fullName>accountid_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountid(18)</label>
        <type>Text</type>
    </CustomField>