force-app/main/default/objects/Account/fields/AliasesShortNames__c.field-meta.xml
<CustomField>
    <fullName>AliasesShortNames__c</fullName>
    <description>RUBX-594 : Sales - Shows the other popular name/s of an account; used in Partner Account creation process</description>
    <label>Aliases/Short Names</label>
    <length>80</length>
    <type>Text</type>
</CustomField>