force-app/main/default/objects/Account/fields/D_U_N_S_number__c.field-meta.xml
<CustomField>
    <fullName>D_U_N_S_number__c</fullName>
    <description>RUBX-594 : The Data Universal Numbering System (D-U-N-S) number is a unique nine-digit number assigned to every business location in the D&amp;B database that has a unique, separate, and distinct operation. D-U-N-S numbers are used by industries and organizations around the world as a global standard for business identification and tracking.</description>
    <label>D-U-N-S number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>