force-app/main/default/objects/Account/fields/Digital_Account_Governance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Digital_Account_Governance_Rating__c</fullName>
    <description>RUBX-594 : This field is used to update the Account Governance Profile Grade</description>
    <label>Digital Account Governance Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Goverance_Ratings</valueSetName>
    </valueSet>
</CustomField>