force-app/main/default/objects/Account/fields/Lending_Account_Governance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lending_Account_Governance_Rating__c</fullName>
    <description>RUBX-594 : This field is to update the Lending Account Governance Rating</description>
    <label>Lending Account Governance Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Goverance_Ratings</valueSetName>
    </valueSet>
</CustomField>