force-app/main/default/objects/Account/fields/Primary_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bill_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>RUBX-1672 : Lookup to capture Primary Billing Address for Account</description>
    <label>Primary Bill-To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an address record associated with this Account.</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Address__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Accounts (Primary Bill-To)</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>