force-app/main/default/objects/Account/fields/Retail_Account_Governance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Retail_Account_Governance_Rating__c</fullName>
    <description>RUBX-594 : This field is used to update Account Governance Rating</description>
    <label>Retail Account Governance Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Goverance_Ratings</valueSetName>
    </valueSet>
</CustomField>