force-app/main/default/objects/Account/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <description>RUBX-1560 : This field is used to capture Sales Sub-Region(dependent on Region)</description>
    <label>Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Regions</valueSetName>
    </valueSet>
</CustomField>