force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description>This record type is used for Customers(converted through Prospects)</description>
    <label>Customer</label>
</RecordType>