force-app/main/default/objects/Account/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <description>This record type is used for Finastra Propects, which have not been converted to Customers</description>
    <label>Prospect</label>
</RecordType>