force-app/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <description>This record type is used to create accounts for Vendors</description>
    <label>Vendor</label>
</RecordType>