force-app/main/default/objects/Account/listViews/All_Accounts_in_NACM.listView-meta.xml
<ListView>
    <fullName>All_Accounts_in_NACM</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Country__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>NACM</value>
    </filters>
    <label>All Accounts in NACM</label>
</ListView>